--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
   "homepage": "https://github.com/AltaraceO/fullstack_bootcamp-final_project#readme",
   "dependencies": {
     "axios": "^0.25.0",
+    "bcryptjs": "^2.4.3",
     "concurrently": "^7.0.0",
     "cors": "^2.8.5",
     "dotenv": "^15.0.0",
     "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.3.1",
     "mongoose": "^6.1.10",
     "nodemon": "^2.0.15",
